--- a/public/style.css
+++ b/public/style.css
@@ -3,7 +3,7 @@ body {
   min-height: 100vh;
   flex-direction: column;
   background-color: grey;
-  font-family: Verdana, Geneva, sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .container {
