--- a/public/style.css
+++ b/public/style.css
@@ -46,7 +46,8 @@ nav, aside {
 }
 
 .album {
-  margin: 5px;
+  margin: 5px auto;
+  width: 60%;
   padding: 5px 15px 5px 15px;
   background-color: lightblue;
   border-radius: 5px;
@@ -57,8 +58,9 @@ nav, aside {
 }
 .form {
   margin-left: 30px;
-  width: 200px;
+  width: 250px;
   border: 2px solid black;
+  border-radius: 5px;
   text-align: center;
 }
 
