--- a/public/style.css
+++ b/public/style.css
@@ -5,7 +5,7 @@ body {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
-  background-color: grey;
+  /*background-color: grey;*/
   font-family: 'Open Sans', sans-serif;
 }
 
@@ -13,7 +13,7 @@ body {
   display: flex;
   flex: 1;
   flex-direction: column;
-  background-color: lightgrey;
+  /*background-color: lightgrey;*/
   border-radius: 5px;
 
 }
@@ -28,9 +28,10 @@ body {
 }
 
 header {
+  font-family: 'Sedgwick Ave Display', cursive;
   text-align: center;
   font-size: 50px;
-  color: black;
+  color: indigo;
 }
 
 main {
@@ -49,24 +50,44 @@ nav, aside {
   margin: 5px auto;
   width: 70%;
   padding: 5px 15px 5px 15px;
-  background-color: lightblue;
-  border-radius: 5px;
+  /*background-color: lightblue;*/
+  /*border: 2px solid lightblue;
+  border-radius: 3px;*/
 }
 .reviews {
   height: 200px;
-  margin-left: 30px;
+  margin-left: 20px;
 }
 .form {
   margin-left: 30px;
   width: 250px;
-  border: 2px solid black;
-  border-radius: 5px;
+  /*border: 1px solid black;
+  border-radius: 3px;*/
   text-align: center;
 }
 
 .album-art {
+  padding: 10px;
   width: 300px;
   height: auto;
+  border: 1px solid black;
+  border-radius: 3px;
+}
+
+li {
+  list-style: none;
+}
+
+input {
+  margin: 5px;
+}
+
+.submit {
+  background-color: indigo;
+  color: white;
+  border: none;
+  border-radius: 2px;
+  padding: 5px;
 }
 
 @media (min-width: 768px) {
