--- a/public/style.css
+++ b/public/style.css
@@ -47,7 +47,7 @@ nav, aside {
 
 .album {
   margin: 5px auto;
-  width: 70%;
+  max-width: 70%;
   padding: 5px 15px 5px 15px;
   background-color: lightblue;
   border-radius: 5px;
@@ -58,7 +58,7 @@ nav, aside {
 }
 .form {
   margin-left: 30px;
-  width: 250px;
+  max-width: 250px;
   border: 2px solid black;
   border-radius: 5px;
   text-align: center;
